tests/test_data/CodeStructureSnippets/good/snipWrite.ifj21
require "ifj21"

function main()
    local a : integer = 5
    write("vysl\n", a,"aaa\n")
end
main()
