tests/test_data/CodeStructureSnippets/bad/sem_err_4.1.ifj21
require "ifj21"
function main()
    local vysl : integer = "papa"
end
main()
